# imgscaler

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  metrics.py
app/api/: routes.py
app/api/v1/: status.py  upscaling.py  websocket.py
app/services/: job_queue.py  tfhub_upscale_service.py  upscale_service.py
app/utils/: image_io.py  metal_setup.py
frontend/: index.html
frontend/src/: app.js  jobClient.js
